# alloy-web3-lab

./: .gitignore  Cargo.toml  README.md
chains/ethereum/: Cargo.toml
chains/ethereum/src/: app_state.rs  error.rs  lib.rs  main.rs
chains/ethereum/src/domain/: erc20_info_response.rs  mod.rs
chains/ethereum/src/routes/: get_erc20_info.rs  mod.rs
chains/etheterum/: Cargo.toml
chains/solana/: Cargo.toml
chains/solana/src/: app_state.rs  error.rs  lib.rs  main.rs
chains/solana/src/domain/: account_balance.rs  account_response.rs  mod.rs
chains/solana/src/routes/: balance.rs  mod.rs  program_accounts.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  telemetry.rs  utils.rs
