[workspace]
resolver = "2"

members = ["common", "chains/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
