[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
