[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
