[package]
name = "solana"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }

tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
borsh = "1"
borsh-derive = "1"
