[package]
name = "solana"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }

tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
borsh = "1"
borsh-derive = "1"
